--- a/V2/HotNew/HotNew/HotNewViewController.storyboard
+++ b/V2/HotNew/HotNew/HotNewViewController.storyboard
@@ -10,13 +10,13 @@
         <!--Hot New View Controller-->
         <scene sceneID="ZFr-Ty-6FQ">
             <objects>
-                <tableViewController storyboardIdentifier="HotNewViewController" id="iN2-zz-t7V" customClass="HotNewViewController" customModule="V2" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="HotNewViewController" id="iN2-zz-t7V" customClass="HotNewViewController" customModule="HotNew" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" id="NtU-IC-Lmr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TopicCell" rowHeight="100" id="0u9-8C-VE0" customClass="TopicCell" customModule="V2" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TopicCell" rowHeight="100" id="0u9-8C-VE0" customClass="TopicCell" customModule="HotNew" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="49.5" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="0u9-8C-VE0" id="b85-EN-Has">
